--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ before_script:
     - php bin/vendors install
     - ./bin/prepare-test-env.sh
 
-script: 
-    - phpunit -c app/
-    - php app/console --env=test behat src/Knp/Bundle/KnpBundlesBundle
+script: phpunit -c app/ && php app/console --env=test behat
 
 branches:
     except:
