Add an anonymous consumer to handle github post-push hooks

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -111,3 +111,8 @@ old_sound_rabbit_mq:
             exchange_options: {name: 'upload-bundle', type: direct, durable: true }
             queue_options:    {name: 'upload-bundle'}
             callback:         knp_bundles.consumer.update_bundle
+    anon_consumers:
+        github_hook:
+            connection: default
+            exchange_options: {name: 'github-hooks', type: topic }
+            callback:         knp_bundles.consumer.github_hook
