--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -4,6 +4,7 @@ parameters:
     knp_bundles.trending_bundle_twitterer.class: Knp\Bundle\KnpBundlesBundle\Twitterer\TrendingBundleTwitterer
     knp_bundles.trending_bundle_tweet.template: "Discover {name}, today's trending #Symfony2 bundle {url} on #KnpBundles"
     knp_bundles.consumer.update_bundle.class: Knp\Bundle\KnpBundlesBundle\Consumer\UpdateBundleConsumer
+    knp_bundles.consumer.github_hook.class: Knp\Bundle\KnpBundlesBundle\Consumer\GithubHookConsumer
     knp_bundles.user.manager.class: Knp\Bundle\KnpBundlesBundle\Entity\UserManager
     knp_bundles.output.class: Symfony\Component\Console\Output\NullOutput
     knp_bundles.travis.class: Knp\Bundle\KnpBundlesBundle\Travis\Travis
@@ -87,5 +88,14 @@ services:
             - @knp_bundles.user.manager
             - @knp_bundles.github_repository_api
             - @knp_bundles.travis
+        calls:
+            - [ setLogger, [@logger]]
+
+    knp_bundles.consumer.github_hook:
+        public: false
+        class: %knp_bundles.consumer.github_hook.class%
+        arguments: 
+            - @doctrine.orm.entity_manager
+            - @old_sound_rabbit_mq.update_bundle_producer
         calls:
             - [ setLogger, [@logger]]
