Add scoring listeners as services

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -19,6 +19,12 @@ parameters:
     knp_bundles.imagine.imagick.class: Imagine\Imagick\Imagine
     knp_bundles.imagine.gmagick.class: Imagine\Gmagick\Imagine
     knp_bundles.indexer.solr.class: Knp\Bundle\KnpBundlesBundle\Indexer\SolrIndexer
+    knp_bundles.scoring.activity.class: Knp\Bundle\KnpBundlesBundle\Scoring\ActivityListener
+    knp_bundles.scoring.composer.class: Knp\Bundle\KnpBundlesBundle\Scoring\ComposerListener
+    knp_bundles.scoring.followers.class: Knp\Bundle\KnpBundlesBundle\Scoring\FollowersListener
+    knp_bundles.scoring.knpbundles.class: Knp\Bundle\KnpBundlesBundle\Scoring\KnpBundlesListener
+    knp_bundles.scoring.readme.class: Knp\Bundle\KnpBundlesBundle\Scoring\ReadmeListener
+    knp_bundles.scoring.travis.class: Knp\Bundle\KnpBundlesBundle\Scoring\TravisListener
 
 services:
     knp_bundles.updater:
@@ -134,3 +140,33 @@ services:
             - @old_sound_rabbit_mq.update_bundle_producer
         calls:
             - [ setLogger, [@logger]]
+
+    knp_bundles.scoring.activity:
+        class: %knp_bundles.scoring.activity.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
+
+    knp_bundles.scoring.followers:
+        class: %knp_bundles.scoring.followers.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
+
+    knp_bundles.scoring.composer:
+        class: %knp_bundles.scoring.composer.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
+
+    knp_bundles.scoring.knpbundles:
+        class: %knp_bundles.scoring.knpbundles.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
+
+    knp_bundles.scoring.readme:
+        class: %knp_bundles.scoring.readme.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
+
+    knp_bundles.scoring.travis:
+        class: %knp_bundles.scoring.travis.class%
+        tags:
+            - { name: kernel.event_listener, event: bundle.update_score, method: onScoreUpdate }
