Change the way the bundle's score is calculated (using event dispatcher)

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -69,9 +69,10 @@ services:
     knp_bundles.github_repository_api:
         class: %knp_bundles.github.repository_api.class% 
         arguments:
-          - @knp_bundles.github_client
-          - @knp_bundles.output
-          - @knp_bundles.git_repository_manager
+            - @knp_bundles.github_client
+            - @knp_bundles.output
+            - @knp_bundles.git_repository_manager
+            - @event_dispatcher
 
     knp_bundles.github.search:
         class: %knp_bundles.github.search.class%
