Use the new UserManager in security's UserProvidr Fix #120

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -28,8 +28,7 @@ services:
     knp_bundles.user.provider:
         class: %knp_bundles.user.provider.class%
         arguments:
-            - @knp_bundles.entity_manager
-            - @knp_bundles.updater
+            - @knp_bundles.user.manager
 
     knp_bundles.trending_bundle_twitterer:
         class:                    %knp_bundles.trending_bundle_twitterer.class%
