--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -78,16 +78,19 @@ services:
 
     knp_bundles.imagine.gd:
         class:                    %knp_bundles.imagine.gd.class%
+        public:                   false
 
     knp_bundles.imagine.imagick:
         class:                    %knp_bundles.imagine.imagick.class%
+        public:                   false
         
     knp_bundles.imagine.gmagick:
-        class:                    %knp_bundles.imagine.gmagick.class%        
+        class:                    %knp_bundles.imagine.gmagick.class%
+        public:                   false
 
     knp_bundles.badge_generator:
         class:                    %knp_bundles.badge_generator.class%
         arguments:
             - @knp_bundles.imagine
         calls:
-            - [ setRootDir, [%kernel.root_dir%] ]
+            - [ setCacheDir, [%kernel.cache_dir%] ]
