--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -97,6 +97,9 @@ services:
         calls:
             - [ setLogger, [@logger]]
 
+    knp_bundles.imagine:
+        alias: knp_bundles.imagine.gd
+
     knp_bundles.imagine.gd:
         class: %knp_bundles.imagine.gd.class%
         public: false
