--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,5 +23,6 @@ parameters:
     old_sound_rabbit_mq.user: "guest"
     old_sound_rabbit_mq.password: "guest"
     old_sound_rabbit_mq.vhost: "/"
+    old_sound_rabbit_mq.debug: %kernel.debug%
 
     kb_sitemap.base_url: http://knpbundles.com
