Sort by number of recommandations

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -48,7 +48,7 @@ user_list:
 bundle_list:
     pattern:        /{sort}
     defaults:       { _controller: KnpBundlesBundle:Bundle:list, sort: trend }
-    requirements:   { _method: "GET", sort: "(best|updated|newest|trend)"}
+    requirements:   { _method: "GET", sort: "(best|updated|newest|trend|recommended)"}
 
 bundle_keyword:
     pattern:        /keyword/{slug}
