Sort by number of recommandations

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/routing.yml
@@ -16,6 +16,16 @@ user_list:
     defaults:       { _controller: KnpBundlesBundle:User:list, sort: name }
     requirements:   { _method: "GET", sort: "(name|best)"}
 
+bundle_list:
+    pattern:        /{sort}
+    defaults:       { _controller: KnpBundlesBundle:Bundle:list, sort: trend }
+    requirements:   { _method: "GET", sort: "(best|updated|newest|trend|recommended)"}
+
+bundle_keyword:
+    pattern:        /keyword/{slug}
+    defaults:       { _controller: KnpBundlesBundle:Bundle:searchByKeyword }
+    requirements:   { _method: "GET", slug: ".+" }
+
 user_bundle_list:
     pattern:        /{name}/bundles
     defaults:       { _controller: KnpBundlesBundle:User:bundles }
