--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -36,3 +36,7 @@ parameters:
     solarium.host: 127.0.0.1
     solarium.port: 8983
     solarium.path: /solr
+
+    banner:
+        text: "Hello|[Edgar]"
+        url: "http://knpbundles.com"
