Move index remove into indexer

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /web/sitemap.xml*
 /app/DoctrineMigrations/*
 /src/Knp/Bundle/KnpBundlesBundle/DoctrineMigrations/*
+/src/Knp/Bundle/KnpBundlesBundle/Resources/solr/data/*
 /vendor/*
 /app/config/parameters.yml
 /app/config/parameters.*.yml
