--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
     - cp app/config/parameters.yml.test app/config/parameters.yml
     - php bin/vendors install
     - ./bin/prepare-test-env.sh
+    - ./bin/prepare-test-solr.sh
 
 script: phpunit -c app/ && php app/console --env=test behat --format progress
 
