Removed --limit option, added limit container parameter for Finders

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -34,3 +34,5 @@ parameters:
     banner:
         text: "Hello|[Edgar]"
         url: "http://knpbundles.com"
+
+    knp_bundles.finder.limit: 2000
