--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /app/config/parameters.*.yml
 composer.phar
 bin/*
+!bin/update-all-bundles.sh
 !bin/launch-rabit-consumers.sh
 !bin/prepare-*.sh
 !bin/behat-*.sh
