add symfonyVersions to track which bundle branch goes with which symfony version
storing symfonyversions as an array
adapt twig to output array symfonyversions
add method updateSymfonyVersions to set array from packagist
fix path for packagist json file
rename branch to version
adapt per stof's comments
adapt plural for symfonyversions
add tabular format
ui table style and touch
move style to css
jozef comment on css
moved &nbsp; to css
add changes.md changelog
extend fixtures for symfonyVersions
remove versions from changelog changes.md as per @jozef suggestion
update vendors --- test passing
remove space from composer.lock
add migration class
add update bundles script
address jozef comments
update vendors and fix problem with goutte package
add missing email test monolog configuration
fix config and vendors

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /web/bundles/*
 /web/sitemap.xml*
 /app/DoctrineMigrations/*
+!/app/DoctrineMigrations/Version20120629202640.php
 /src/Knp/Bundle/KnpBundlesBundle/DoctrineMigrations/*
 /src/Knp/Bundle/KnpBundlesBundle/Resources/solr/data/*
 /vendor/*
@@ -18,6 +19,7 @@
 /app/config/parameters.*.yml
 composer.phar
 bin/*
+!bin/update-all-bundles.sh
 !bin/launch-rabit-consumers.sh
 !bin/prepare-*.sh
 !bin/behat-*.sh
