--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,5 +2,12 @@ _internal:
     resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
     prefix:   /_internal
 
+hwi_oauth_redirect:
+    resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+    prefix:   /connect
+
+hwi_oauth_login:
+    resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+
 knpbundles:
     resource: "@KnpBundlesBundle/Resources/config/routing.yml"
