--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
         "knplabs/knp-disqus-bundle": "dev-master",
         "knplabs/knp-time-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "2.1",
+        "knplabs/knp-zend-cache-bundle": "dev-master",
+        "knplabs/github-api": "0.1",
         "zendframework/zend-cache": "2.0.0-beta1",
         "zendframework/zend-filter": "2.0.0-beta1",
-        "knplabs/knp-zend-cache-bundle": "dev-master",
-        "knplabs/github-api": "dev-master",
         "imagine/imagine": "dev-master",
         "avalanche123/imagine-bundle": "dev-master",
         "kriswallsmith/buzz": "0.7",
@@ -38,42 +38,20 @@
 
         "fabpot/goutte": "1.0.x-dev",
 
-        "ornicar/gravatar-bundle": "dev-master",
-        "ornicar/php-git-repo": "master-dev",
+        "ornicar/php-git-repo": "dev-master",
+        "twitter/app-bundle": "dev-master",
+        "twitter/oauth": "dev-master",
 
-        "twitter/app-bundle": "master-dev",
-        "twitter/oauth": "master-dev",
-
-        "mbontemps/oauth-bundle": "master-dev"
+        "hwi/oauth-bundle": "dev-master"
     },
     "require-dev": {
-        "behat/behat":                  "2.4.2",
+        "behat/behat":                  "2.4.*",
         "behat/symfony2-extension":     "dev-master",
         "behat/mink-extension":         "dev-master",
         "behat/mink-browserkit-driver": "dev-master",
-        "behat/common-contexts": "dev-master"
+        "behat/common-contexts":        "dev-master"
     },
     "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "mbontemps/oauth-bundle",
-                "version": "master-dev",
-                "dist": {
-                    "url": "https://github.com/mbontemps/EtcpasswdOAuthBundle/zipball/master",
-                    "type": "zip"
-                },
-                "source": {
-                    "url": "git://github.com/mbontemps/EtcpasswdOAuthBundle.git",
-                    "type": "git",
-                    "reference": "master"
-                },
-                "autoload": {
-                    "psr-0": { "Etcpasswd\\OAuthBundle": "" }
-                },
-                "target-dir": "Etcpasswd/OAuthBundle"
-            }
-        },
         {
             "type": "package",
             "package": {
@@ -166,7 +144,7 @@
             }
         }
     ],
-
+    "minimum-stability": "dev",
     "scripts": {
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
