--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/security.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/security.yml
@@ -1,17 +1,22 @@
 security:
     firewalls:
-          oauth:
-              anonymous: true
-              logout: true
-              pattern: ^/
-              oauth:
-                  provider:      knpbundles_user
-                  auth_provider: github
-                  client_id:     %knp_bundles.github.client_id%
-                  client_secret: %knp_bundles.github.client_secret%
-                  login_path:    /login
-                  check_path:    /oauth/github
-                  failure_path:  /
+        secured_area:
+            pattern:   ^/
+            anonymous: true
+            logout:    true
+            oauth:
+                resource_owners:
+                    github:        /login/check-github
+                    sensio:        /login/check-sensio
+                login_path:        /login
+                failure_path:      /login
+
+                oauth_user_provider:
+                    service: knp_bundles.user.provider
+
+    access_control:
+        - { path: ^/add, roles: ROLE_USER }
+        - { path: ^/change-usage-status$, roles: ROLE_USER }
 
     providers:
         knpbundles_user:
