--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -178,3 +178,16 @@ services:
         arguments:
             - @solarium.client
             - @kernel
+
+    # Buzz
+    buzz.message_factory:
+        class: Buzz\Message\Factory
+        public: false
+
+    buzz.client:
+        class: Buzz\Client\Curl
+        public: false
+
+    buzz:
+        class: Buzz\Browser
+        arguments: ["@buzz.client", "@buzz.message_factory"]
