--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
         "doctrine/doctrine-migrations-bundle": "*",
         "stof/doctrine-extensions-bundle": "*",
         "knplabs/knp-markdown-bundle": "*",
-        "knplabs/knp-menu-bundle": "*",
+        "knplabs/knp-menu-bundle": "1.1.*",
         "knplabs/knp-disqus-bundle": "*",
         "knplabs/knp-time-bundle": "*",
         "knplabs/knp-paginator-bundle": "2.1",
         "knplabs/knp-zend-cache-bundle": "*",
         "knplabs/github-api": "*",
         "avalanche123/imagine-bundle": "*",
-        "kriswallsmith/buzz": "*",
+        "kriswallsmith/buzz": "0.6",
         "nelmio/solarium-bundle": "*",
         "igorw/file-serve-bundle": "*",
 
