comment behat lines and add php 5.4 and 5.3 travis support

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /app/config/parameters.yml
 /app/config/parameters.*.yml
 composer.phar
+bin/*
+!bin/launch-rabit-consumers.sh
+!bin/prepare-*.sh
+
