adapt query to paginate json results
attempt behat test for pagination of developers
fix webapicontext
wip
removed config_behat.yml import
implement api context
puts out nulls for mink parameters
fix calling mink parameters outside constructor
fix getBrowser method in ApiContext
add step to enable pagination check
pagination behat feature passing
remove if statement from listing developers and bundles query
fix name of step
switch base_url to localhost ci independent
remove whitespace according to robocoder
Added nginx conf for testing
set exec permissions on test web script
add some echos to troubleshoot travis
fix bootstrap script
fix behat test and remove conflicting steps
web script tweak
attempt nginx
try apache
fix localhost/behat
add context base_url
fix twig problem
fix version problems with behat
freeze vendors

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ php:
 
 before_script:
     - cp app/config/parameters.yml.test app/config/parameters.yml
-    - curl -s http://getcomposer.org/installer | php
-    - php composer.phar --dev install
+    - curl -s http://getcomposer.org/installer | php -- --quiet
+    - php composer.phar install --dev
+    - ./bin/prepare-test-web.sh
     - ./bin/prepare-test-env.sh
     - ./bin/prepare-test-solr.sh
     - ./bin/prepare-test-gd.sh
+    - mkdir -p app/cache app/logs
+    - php app/console --env=test cache:clear
+    - sudo chmod -R 777 app/cache app/logs
 
 script:
     - phpunit -c app/
