--- a/composer.json
+++ b/composer.json
@@ -5,47 +5,53 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.1.*",
+        "symfony/symfony": "2.1.*-dev",
         "doctrine/orm": "2.2.*",
-        "doctrine/doctrine-bundle": "*",
-        "twig/extensions": "*",
-        "symfony/assetic-bundle": "*",
-        "symfony/monolog-bundle": "*",
-        "sensio/distribution-bundle": "*",
-        "doctrine/doctrine-fixtures-bundle": "*",
-        "doctrine/doctrine-migrations-bundle": "*",
-        "stof/doctrine-extensions-bundle": "*",
-        "knplabs/knp-markdown-bundle": "*",
+        "doctrine/doctrine-bundle": "dev-master",
+        "twig/extensions": "dev-master",
+        "kriswallsmith/assetic": "1.1.x-dev",
+        "symfony/assetic-bundle": "2.1.x-dev",
+        "symfony/monolog-bundle": "2.1.x-dev",
+        "sensio/distribution-bundle": "dev-master",
+        "doctrine/data-fixtures": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "doctrine/migrations": "dev-master",
+        "doctrine/doctrine-migrations-bundle": "dev-master",
+        "stof/doctrine-extensions-bundle": "dev-master",
+        "knplabs/knp-markdown-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "1.1.*",
-        "knplabs/knp-disqus-bundle": "*",
-        "knplabs/knp-time-bundle": "*",
+        "knplabs/knp-disqus-bundle": "dev-master",
+        "knplabs/knp-time-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "2.1",
-        "knplabs/knp-zend-cache-bundle": "*",
-        "knplabs/github-api": "*",
-        "avalanche123/imagine-bundle": "*",
+        "zendframework/zend-cache": "2.0.0-beta1",
+        "zendframework/zend-filter": "2.0.0-beta1",
+        "knplabs/knp-zend-cache-bundle": "dev-master",
+        "knplabs/github-api": "dev-master",
+        "imagine/imagine": "dev-master",
+        "avalanche123/imagine-bundle": "dev-master",
         "kriswallsmith/buzz": "0.7",
-        "nelmio/solarium-bundle": "*",
-        "igorw/file-serve-bundle": "*",
+        "nelmio/solarium-bundle": "dev-master",
+        "igorw/file-serve-bundle": "dev-master",
 
-        "videlalvaro/php-amqplib": "*",
-        "oldsound/rabbitmq-bundle": "*",
+        "videlalvaro/php-amqplib": "dev-master",
+        "oldsound/rabbitmq-bundle": "dev-master",
 
-        "fabpot/goutte": "*",
+        "fabpot/goutte": "1.0.x-dev",
 
-        "ornicar/gravatar-bundle": "*",
-        "ornicar/php-git-repo": "*",
+        "ornicar/gravatar-bundle": "dev-master",
+        "ornicar/php-git-repo": "master-dev",
 
-        "twitter/app-bundle": "*",
-        "twitter/oauth": "*",
+        "twitter/app-bundle": "master-dev",
+        "twitter/oauth": "master-dev",
 
-        "mbontemps/oauth-bundle": "*"
+        "mbontemps/oauth-bundle": "master-dev"
     },
     "require-dev": {
-        "behat/behat":                  "*",
-        "behat/symfony2-extension":     "*",
-        "behat/mink-extension":         "*",
-        "behat/mink-browserkit-driver": "*",
-        "behat/common-contexts": "*"
+        "behat/behat":                  "2.4.2",
+        "behat/symfony2-extension":     "dev-master",
+        "behat/mink-extension":         "dev-master",
+        "behat/mink-browserkit-driver": "dev-master",
+        "behat/common-contexts": "dev-master"
     },
     "repositories": [
         {
