Upgrading behat to 2.4 and additional required changes
remove initialization of mink and behat bundles
add project directory level behat.yml initial spec
remove behat mink configuration from symfony config files
remove old composer.lock and update vendors
add composer lock file for upgrade
fix travis call for behat script and make behat-ci script executable
move behat-ci.sh inside bin directory
fix behat-ci script
adapt Behat Contexts to running state
add mink selenium driver
enable minkcontext steps
ignore behat.yml and make dist version of configuration
embed behat deps on require-dev
shorten namespaces
remove nulls from declaration of kernel vars
remove useless if
remove sellenium, sahi

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_script:
     - ./bin/prepare-test-solr.sh
     - ./bin/prepare-test-gd.sh
 
-script: phpunit -c app/ && php app/console --env=test behat --format progress
+script:
+    - phpunit -c app/
+    - ./bin/behat-ci.sh
 
 branches:
     except:
