--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,6 @@
         "symfony/monolog-bundle": "*",
         "sensio/distribution-bundle": "*",
         "jms/i18n-routing-bundle": "*",
-
-        "behat/behat": "2.3.*",
-        "behat/behat-bundle": "*",
-        "behat/mink-bundle": "*",
-        "behat/common-contexts": "1.1.*",
-
         "doctrine/doctrine-fixtures-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
         "stof/doctrine-extensions-bundle": "*",
@@ -47,12 +41,14 @@
 
         "mbontemps/oauth-bundle": "*"
     },
-
+    "require-dev": {
+        "behat/behat":                  "*",
+        "behat/symfony2-extension":     "*",
+        "behat/mink-extension":         "*",
+        "behat/mink-browserkit-driver": "*",
+        "behat/common-contexts": "*"
+    },
     "repositories": [
-        {
-            "type": "composer",
-            "url": "behat.org"
-        },
         {
             "type": "package",
             "package": {
