add email notification of errors

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -6,9 +6,21 @@ monolog:
         main:
             type: fingers_crossed
             action_level: error
-            handler: nested
+            handler: grouped
+        grouped:
+            type: group
+            members:  [nested, buffered]
         nested:
             type: stream
             path: %kernel.logs_dir%/%kernel.environment%.log
             level: debug
+        buffered:
+            type: buffer
+            handler: swift
+        swift:
+            type:       swift_mailer
+            from_email: luis.cordova@knplabs.com
+            to_email:   luis.cordova@knplabs.com
+            subject:    "[ERROR] knpbundles.com"
+            level:      debug
 
