--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -36,3 +36,6 @@ parameters:
         url: "http://knpbundles.com"
 
     knp_bundles.finder.limit: 2000
+
+    monolog.swift.from_email: error@knpbundles.com
+    monolog.swift.to_email: error@knpbundles.com
