--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,7 @@ doctrine:
     dbal:
         driver:   %database_driver%
         host:     %database_host%
-        path:     %database_path%
+        #path:     %database_path%
         port:     %database_port%
         dbname:   %database_name%
         user:     %database_user%
