Simplified SolrUtils dependencies

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/config/services.yml
@@ -176,4 +176,5 @@ services:
     knp_bundles.utils.solr:
         class: %knp_bundles.utils.solr.class%
         arguments:
-            - @service_container
+            - @solarium.client
+            - @kernel
