Prefix for HWIOauth

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,6 +8,7 @@ hwi_oauth_redirect:
 
 hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+    prefix:   /oauth
 
 knpbundles:
     resource: "@KnpBundlesBundle/Resources/config/routing.yml"
